# codec

./: .gitignore  CONTRACT.md  Cargo.toml  Package.resolved  Package.swift  README.md  SECURITY.md  SECURITY_MEMORY_MODEL.md  buf.gen.yaml  buf.yaml  deny.toml
.github/workflows/: android-runtime-gate.yml  code-checks.yml  crates-package-preflight.yml  crates-release.yml  fuzz.yml  jvm-native-resources.yml  kotlin-android-package-preflight.yml  kotlin-android-package-release.yml  npm-package-preflight.yml  npm-package-release.yml  package-release.yml  protobuf-ci.yml  release-preflight.yml  swift-package-preflight.yml  swift-package-release.yml
crates/base64/: Cargo.toml
crates/base64/src/: error.rs
crates/base64url/: Cargo.toml
crates/cbor/: Cargo.toml
crates/cbor/src/: cid.rs  decode_deterministic_cbor.rs  deterministic.rs  encode_deterministic_cbor.rs  error.rs  lib.rs  value.rs
crates/cbor/src/deterministic/: error.rs  limits.rs  tests.rs
crates/cbor/tests/: cid_tests.rs  deterministic_codec_tests.rs  deterministic_profile_tests.rs
crates/codec/: Cargo.toml  NOTICE  README.md
crates/codec/base64/: Cargo.toml
crates/codec/base64/tests/: base64_tests.rs
crates/codec/base64url/: Cargo.toml
crates/codec/base64url/src/: error.rs
crates/codec/cbor/: Cargo.toml
crates/codec/cbor/src/: decode_dag_cbor.rs  encode_dag_cbor.rs  error.rs  lib.rs
crates/codec/cbor/tests/: canonical_tests.rs  hostile_input_tests.rs
crates/codec/ffi/: Cargo.toml
crates/codec/ffi/src/: codec.rs  guard.rs  kotlin_codec.rs  lib.rs  status.rs
crates/codec/hex/: Cargo.toml
crates/codec/hex/tests/: hex_tests.rs
crates/codec/jcs/: Cargo.toml
crates/codec/jcs/src/: canonicalize.rs  lib.rs  parse_json.rs
crates/codec/jcs/tests/: jcs_tests.rs  rfc8785_conformance_tests.rs
crates/codec/multibase/: Cargo.toml
crates/codec/multibase/src/: base58btc.rs  encode.rs  error.rs
crates/codec/multicodec/: Cargo.toml
crates/codec/multikey/: Cargo.toml
crates/codec/multikey/src/: binding.rs  encode.rs  error.rs  parse.rs
crates/codec/multikey/tests/: multikey_tests.rs
crates/codec/pem/: Cargo.toml  README.md
crates/codec/pem/src/: decode.rs  encode.rs
crates/codec/src/: lib.rs  multicodec.rs  proto_process.rs  scalar_ops.rs
crates/codec/src/multicodec/: tests.rs
crates/codec/src/operation_contract/: copy_limits.rs  decode_documents.rs  dispatch.rs  encode_documents.rs  execute_documents.rs  execute_multiformat.rs  map_errors.rs  mod.rs  shape_results.rs  validate_documents.rs
crates/codec/src/operation_contract/core/: dag_cbor.rs  mod.rs  multikey.rs  pem.rs
crates/codec/src/operation_contract/tests/: deterministic_cbor.rs  dispatch_multiformat.rs  helpers.rs  multikey_documents_pem.rs  support.rs
crates/codec/tests/: vector_suite.rs
crates/codec/tests/vector_suite/: core_methods.rs
crates/codec/wasm-package/: Cargo.toml  LICENSE
crates/codec/wasm-package/src/: base_encoding.rs  boundary.rs  cbor.rs  jcs.rs  lib.rs  map_error.rs  multiformat.rs  pem.rs  proto_output.rs  write_js_object.rs
crates/ffi/: Cargo.toml
crates/ffi/src/: codec.rs  kotlin_codec.rs  lib.rs  pointer.rs  status.rs
crates/ffi/src/codec/: operation.rs  tests.rs
crates/ffi/src/codec/tests/: operation.rs
crates/hex/: Cargo.toml
crates/hex/src/: error.rs
crates/jcs/: Cargo.toml
crates/jcs/src/: canonicalize.rs  error.rs  lib.rs  parse_json.rs
crates/jcs/tests/: jcs_tests.rs  rfc8785_conformance_tests.rs
crates/multibase/: Cargo.toml
crates/multibase/src/: base58btc.rs  decode.rs  encode.rs  error.rs  lib.rs
crates/multibase/tests/: base58btc_tests.rs  decode_tests.rs  encode_tests.rs
crates/multicodec/: Cargo.toml
crates/multicodec/src/: table.rs
crates/multikey/: Cargo.toml  NOTICE
crates/multikey/src/: error.rs  lib.rs  parse.rs
crates/pem/: Cargo.toml
crates/pem/src/: error.rs  label.rs  policy.rs
crates/pem/tests/: pem_tests.rs
crates/proto/: Cargo.toml  README.md
crates/proto/codec/: Cargo.toml  NOTICE  README.md
crates/proto/codec/proto/reallyme/codec/v1/: codec.proto
crates/proto/codec/src/: lib.rs
crates/proto/codec/tests/: generated_tests.rs
crates/proto/proto/reallyme/codec/v1/: codec.proto
crates/proto/src/: error.rs  lib.rs  limits.rs  wire.rs
crates/proto/tests/: generated_tests.rs
crates/proto/tests/generated_tests/: error_wire.rs  operation_wire.rs
crates/wasm/: Cargo.toml  NOTICE
crates/wasm/src/: base_encoding.rs  boundary.rs  cbor.rs  jcs.rs  lib.rs  multiformat.rs  proto_output.rs
docs/: dependency-updates.md  protobuf.md  rust-publishing.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: deterministic_cbor.rs  jcs_text.rs  operation_contract.rs  proto_process.rs
proto/: README.md
proto/reallyme/codec/v1/: codec.proto
scripts/: build_android_native_resources.sh  build_kotlin_native_resource.sh  build_swift_xcframework.sh  check_release_readiness.mjs  codec_proto_sensitivity.mjs  maven-central-bundle.local.sh  maven_central_bundle_local.sh  publish_crates_in_order.mjs  redact_codec_proto_debug.mjs  run_pinned_release_readiness.mjs  stage_kotlin_native_resource.mjs  test_android_consumer_r8_runtime.sh  test_ffi_abi_release_artifact.sh  test_native_sanitizers.sh  validate_codec_vectors.mjs  verify_release_attestation.mjs  verify_release_attestation.test.mjs  verify_swift_release_artifact.mjs  verify_swift_release_artifact.test.mjs  write_native_manifest.mjs  write_native_manifest.test.mjs
scripts/release-readiness/: cli.test.mjs  source-policy.mjs  source-policy.test.mjs
test-vectors/: README.md  codec-vectors.json
vectors/: README.md  codec-vectors.json
