# SPDX-FileCopyrightText: Copyright © 2026 ReallyMe LLC. All rights reserved
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "reallyme-codec-base64"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = true
description = "Base64 codec utilities for ReallyMe Codec."
include = ["/src/**/*.rs", "/tests/**/*.rs", "/Cargo.toml", "/LICENSE", "/NOTICE"]

[lib]
name = "codec_base64"

[dependencies]
base64 = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
