# SPDX-FileCopyrightText: Copyright © 2026 ReallyMe LLC. All rights reserved
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "reallyme-codec-hex"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = true
description = "Canonical lowercase hexadecimal encoding for ReallyMe Codec."
readme = "README.md"
include = ["/src/**/*.rs", "/tests/**/*.rs", "/Cargo.toml", "/README.md", "/LICENSE", "/NOTICE"]

[lib]
name = "codec_hex"

[dependencies]
thiserror = { workspace = true }

[lints]
workspace = true
