# SPDX-FileCopyrightText: Copyright © 2026 ReallyMe LLC. All rights reserved
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "reallyme-codec-multikey"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = true
description = "Multikey encoding and validation support for ReallyMe Codec."
include = ["/src/**/*.rs", "/tests/**/*.rs", "/Cargo.toml", "/LICENSE", "/NOTICE"]


[lib]
name = "codec_multikey"

[dependencies]
codec-multibase = { package = "reallyme-codec-multibase", version = "0.2.0", path = "../multibase" }
codec-multicodec = { package = "reallyme-codec-multicodec", version = "0.2.0", path = "../multicodec" }
thiserror = { workspace = true }

[dev-dependencies]
codec-base64url = { package = "reallyme-codec-base64url", version = "0.2.0", path = "../base64url" }

[lints]
workspace = true
