# SPDX-FileCopyrightText: Copyright © 2026 ReallyMe LLC. All rights reserved
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "reallyme-codec-cbor"
version = "0.1.22"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = true
description = "Canonical CBOR codec support for ReallyMe Codec."


[lib]
name = "codec_cbor"

[dependencies]
cid = { workspace = true }
multihash = { workspace = true }
multihash-codetable = { workspace = true, features = ["sha2"] }
sha2 = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
