# SPDX-FileCopyrightText: Copyright © 2026 ReallyMe LLC. All rights reserved
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "reallyme-codec-multicodec"
version = "0.1.20"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = true
description = "Multicodec identifiers used by ReallyMe Codec."


[lib]
name = "codec_multicodec"

[dependencies]

[lints]
workspace = true
