# SPDX-FileCopyrightText: Copyright © 2026 ReallyMe LLC. All rights reserved
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "reallyme-codec-proto"
version = "0.1.21"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = true
description = "ReallyMe codec protobuf error envelopes generated with Buffa."
include = [
    "/proto/**/*.proto",
    "/src/**/*.rs",
    "/tests/**/*.rs",
    "/Cargo.toml",
    "/README.md",
    "/LICENSE",
    "/NOTICE",
]

[features]
default = []
generated = ["dep:buffa", "dep:serde", "dep:serde_json"]

[dependencies]
buffa = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
